--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Lucas Terriel Personal website" />
   <title>Lucas Website</title>
   <!-- custom CSS -->
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 
   <!-- icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -34,7 +34,7 @@
     <section id="welcome-section" class="welcome-section">
       <div class="welcome-container">
         <div class="content-pull-left">
-          <img id="profile_picture" alt="profile picture" src="./assets/profile.png">
+          <img id="profile_picture" alt="profile picture" src="./assets/img/profile.png">
         </div>
         <div class="content-pull-right">
           <h1 class="fullname-welcome"><span class="firstname-welcome">LUCAS </span><span class="lastname-welcome">TERRIEL</span></h1>
