--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 
+  <!-- Jquery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
@@ -28,6 +30,7 @@
         <li><a href="#education-section">Formation</a></li>
         <li><a href="#tools-section">Outils</a></li>
       </ul>
+
     </nav>
   </header>
   <main>
@@ -39,7 +42,7 @@
         <div class="content-pull-right">
           <h1 class="fullname-welcome"><span class="firstname-welcome">LUCAS </span><span class="lastname-welcome">TERRIEL</span></h1>
           <p id="location"><i class="fa-solid fa-location-dot"></i> Paris, France</p>
-          <p id="email"><i class="fa-solid fa-envelope"></i><a href="mailto:ls.terriel@gmail.com">ls.terriel@gmail.com</a></p>
+          <p id="email"><i class="fa-solid fa-envelope"></i><a href="mailto:ls.terriel@gmail.com"> ls.terriel@gmail.com</a></p>
           <ul class="social-contact-list">
             <li><a href="#" class="social-icon"><i class="is fa-brands fa-linkedin-in"></i></a></li>
             <li><a href="#" class="social-icon"><i class="is fa-brands fa-twitter"></i></a></li>
@@ -47,10 +50,11 @@
             <li><a href="#" class="social-icon"><i class="ai ai-hal"></i></a></li>
             <li><a href="#" class="social-icon"><i class="ai ai-orcid"></i></a></li>
           </ul>
+          
         </div>
       </div>
       <div class="welcome-description">
-        <p>Ma description</p>
+        <p><!--Ma description--></p>
       </div>
     </section>
     <section id="projects-section">
@@ -72,6 +76,7 @@
     </section>
   </main>
   <footer></footer>
+
 </body>
 
 </html>
