--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h2>Formation</h2>
     </section>
     <section id="tools-section">
-      <h2>Languages de programmation, outils et compétences</h2>
+      <h2>Langages de programmation, outils et compétences</h2>
     </section>
   </main>
   <footer></footer>
